# ros-nmea-reader

./: .gitignore  package.xml  setup.cfg  setup.py
nmea_reader/: nmea_reader.py
