<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nmea_reader</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jerry73204@gmail.com">Lin, Hsiang-Jui</maintainer>
  <license>BSD-3-Clause</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
